实现了上下文菜单的更新功能， 并且实现了悬浮按钮编辑图书的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="sure_to_delete">确定删除</string>
     <string name="yes">是</string>
     <string name="no">否</string>
+    <string name="edit_biaoti">图书编辑</string>
 </resources>
